# RobotMovementInPointCloud

./: LICENSE  README.md  out.ply
Clustering/: out.ply  outInlier.ply  outOutlier.ply  ransac.py
PointCloudProcessing/: .gitignore
PointCloudProcessing/RealSense/: Open3DProcessing.py  ReadFramesOpenCv.py  ReadPlyFiles.py  frame_processing.py  requirements.txt
PointCloudProcessing/RealSense/Experiments/: AlignFilterOpen3D.py  AlignRealSenseStream.py  Open3dPlyExport.py  ReadDepths.py
PointCloudProcessing/RealSense/Experiments/Clustering/: ExporterPly.py  GetCameraDetails.py  ProcessorPly.py  ScreenCamera_2023-01-09-17-37-35.json  ScreenCamera_2023-01-10-11-31-55.json  colors.out  depth.txt  depths.out  depths.txt.npy
PointCloudProcessing/RealSense/fast-simplification/fast_simplification/: Simplify.h  _simplify.pyx  simplify.py  wrapper.h
PointCloudProcessing/RealSense/pyrealsense/: pyrealsense2.cp310-win_amd64.pyd
PointCloudProcessing/RealSense/realsense-cpp/librealsense-2.53.1/include/librealsense2/hpp/: rs_export.hpp
PointCloudProcessing/RealSense/realsense-cpp/librealsense-2.53.1/wrappers/python/: python.cpp
RobotGrpcClient/: README.md  RobotControllerClient.py  RobotControllerClientTests.py  robot.proto  robot_pb2.py  robot_pb2_grpc.py
surface-simplification-cgal/: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  edge_collapse.cpp  edge_collapse_garland_heckbert.cpp
